implement cpu based checks